--- a/BMWControl/BMWControl.csproj
+++ b/BMWControl/BMWControl.csproj
@@ -57,10 +57,11 @@
     <Compile Include="Handlers\CarHandlers\SeatHandler.cs" />
     <Compile Include="Handlers\CanHandlers\CanEventHandler.cs" />
     <Compile Include="Handlers\CanHandlers\CanHandler.cs" />
-    <Compile Include="Handlers\CanHandlers\ServerHandler.cs" />
+    <Compile Include="Handlers\NetworkHandlers\ServerHandler.cs" />
     <Compile Include="Misc\CanFrame.cs" />
     <Compile Include="Misc\CanID.cs" />
     <Compile Include="Misc\HelperClass.cs" />
+    <Compile Include="Misc\NetworkID.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
